fix align-sef as align-items

--- a/docs/stylesheets/feedback.css
+++ b/docs/stylesheets/feedback.css
@@ -88,7 +88,7 @@
     width: 75%;
   }
 .md-feedback__inner{
-  align-self: center  
+  align-items: center;  
 }
 }
 
